--- a/backend/package.json
+++ b/backend/package.json
@@ -21,15 +21,19 @@
     },
     "dependencies": {
         "@prisma/client": "^4.12.0",
+        "bcrypt": "^5.1.0",
         "body-parser": "^1.20.1",
         "cors": "^2.8.0",
         "dotenv": "^16.0.0",
         "express": "^4.18.0",
+        "express-jwt": "^8.4.1",
+        "jsonwebtoken": "^9.0.0",
         "mysql2": "^3.0.0",
         "swagger-jsdoc": "^6.2.0",
         "swagger-ui-express": "^4.6.0"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.0",
         "@types/mysql": "^2.15.0",
