--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
@@ -13,6 +14,6 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.13",
-    "prisma": "^4.11.0"
+    "prisma": "^4.14.1"
   }
 }
